# tex-ner

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Prompting NER.ipynb  README.md  download-refs.sh  download.sh  getpreds.sh  gptner.py  heatmap.py  llm-train.sh  nautilus-job.yaml  ner_tagger.py  page_filter.py  pod.yaml  predict.sh  pyproject.toml  response_schema.json  run-kfold.sh  run.sh  score.py  test-job.yaml  test.sh  train-job-name-ref.yaml  train-job.yaml  train_link_filter.py  tune-job.yaml  tune.sh  upload-preds.sh
jobs/: pod.yaml  predict-job.yaml  predict-name-ref-job.yaml  train-job.yaml  train-llm-job.yaml  tune-job.yaml  volpod.yaml
src/linking/: linker.py
src/ner/: collator.py  config.py  crf.py  data.py  main.py  model.py  trainer.py  utils.py
src/ner_training/: :e  __init__.py  collator.py  config.py  crf.py  data.py  linker.py  main.py  model.py  namer.py  train.py  trainer.py  utils.py
yamls/: pod.yaml  predict-job.yaml  test-job.yaml  train-job.yaml  train-kfold-job.yaml  train-llm-job.yaml  tune-job.yaml  volpod.yaml
