[project]
name = "ner-training"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nilay Patel", email = "nilaypatel2@gmail.com" }
]
dependencies = [
    "transformers>=4.42.4",
    "torch>=2.3.1",
    "pandas>=2.2.2",
    "datasets>=2.20.0",
    "tokenizers>=0.19.1",
    "evaluate>=0.4.2",
    "more-itertools>=10.3.0",
    "scikit-learn>=1.5.1",
    "accelerate>=0.32.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "jupyter>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ner_training"]

[tool.black]
line-length = 120
