[project]
name = "ner-training"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nilay Patel", email = "nilaypatel2@gmail.com" }
]
dependencies = [
    "torch>=2.5.0",
    "pandas>=2.2.2",
    "datasets>=2.20.0",
    "evaluate>=0.4.2",
    "more-itertools>=10.3.0",
    "scikit-learn>=1.5.1",
    "accelerate>=1.0.1",
    "wandb>=0.17.9",
    "click>=8.1.7",
    "icecream>=2.1.3",
    "jsonlines>=4.0.0",
    "seqeval>=1.2.2",
    "pytorch-crf>=0.7.2",
    "ray[tune]>=2.36.0",
    "seaborn>=0.13.2",
    "conlleval>=0.2",
    "peft>=0.13.2",
    "bitsandbytes>=0.42.0",
    "transformers==4.41.0",
    "openai>=1.53.0",
    "tiktoken>=0.8.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black[jupyter]>=24.10.0",
    "isort>=5.13.2",
    "jupyter>=1.0.0",
    "scalene>=1.5.45",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ner"]

[tool.black]
line-length = 120
